@@ -1,4 +1,6 @@
 2018-04-22  vaiorabbit
 
 	* First commit.
+	* Python client sample(client.py): Added.
+
 
